cluster/apps/networking/traefik/dashboard/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: networking
  labels:
    app: traefik

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
